--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ subjects:
 - !lcsh 'Japan -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Christmas stories'
+- GITenberg
 title: 'Mr. Bamboo and the Honorable Little God
 
   A Christmas Story'
